feat: Refactoring of the project structure. Created based backend for team